<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
        <item
            android:id="@+id/mnu_orden_foto2"
            android:icon="@drawable/ic_contacto"
            android:title="@string/fotos"
            android:showAsAction="always" />
    -->
    <!--
            <item
                android:id="@+id/mnu_orden_foto"
                android:icon="@drawable/ic_action_fotos"
                android:title="@string/fotos"
                android:showAsAction="always" />
    -->
        <item
            android:id="@+id/mnu_orden_ruta"
            android:icon="@drawable/ic_action_ruta"
            android:title="@string/route"
            android:showAsAction="always" />

        <item
            android:id="@+id/mnu_orden_gastos"
            android:icon="@drawable/ic_action_gastos"
            android:title="@string/gastos"
            android:showAsAction="always" />

        <item
            android:id="@+id/mnu_orden_stop"
            android:icon="@drawable/ic_action_stop"
            android:showAsAction="never"
            android:title="@string/stop_orden" />

        <item
            android:id="@+id/mnu_orden_pause"
            android:icon="@drawable/ic_order_pause"
            android:showAsAction="never"
            android:title="@string/pause_orden" />
    </menu>