<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.ddsmedia.tusa.tusamoviloperador.NewTicketActivity">

    <ScrollView
        android:id="@+id/Scview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:src="@drawable/logoatm" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <EditText
                    android:id="@+id/EdtOperador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/operador"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <EditText
                    android:id="@+id/EdtLicencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/licencia"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:gravity="start">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtVigencia1"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:text="@string/vigencia1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/black_overlay"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/BtnSaveVigencia"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:text="@string/vigencia"
                    android:background="@color/gradient"
                    android:textSize="15sp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:gravity="start">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtFecha1"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:text="@string/fecha1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/black_overlay"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/BtnSaveFecha"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:text="@string/vigencia"
                    android:background="@color/gradient"
                    android:textSize="15sp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/Horas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/horas"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black_overlay"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <ListView
                android:id="@+id/LstHoras"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:background="@color/gradient"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>



            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/txtTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/tipo"
                android:textSize="18sp"
                android:textColor="@color/black_overlay"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <EditText
                    android:id="@+id/EdtNumOT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ot"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <EditText
                    android:id="@+id/EdtOrigen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/origen"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <EditText
                    android:id="@+id/EdtDestino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/destino"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <EditText
                    android:id="@+id/EdtMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marca"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <EditText
                    android:id="@+id/EdtModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modelo"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <EditText
                    android:id="@+id/EdtPlacas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placas"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/txtFirmaOperador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Firma de operador"
                android:textSize="17dp"
                android:gravity="left"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/txtFirmaRastreo_Tráfico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Firma de rastreo o tráfico"
                android:textSize="17dp"
                android:gravity="left"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/txtNorma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NOM-087-SCT-2-2017"
                android:textSize="17dp"
                android:gravity="left"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <Button
                android:id="@+id/BtnSaveBitacora"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/saveBitacora"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
