<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.ddsmedia.tusa.tusamoviloperador.PasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:src="@drawable/logoatm" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/txtPwdA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_actual"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/txtPwdN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_new"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/txtPwdN2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_repeat"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/pbarP"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSaveP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_password" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>
